# gradient-descent-docker

./: Dockerfile  README.md  gradient_descent.py  pyproject.toml
