[tool.poetry]
name = "gradient-descent-docker"
version = "0.1.0"
description = ""
authors = ["Ilyas Assylbekov <135857875+ilyas-assylbekov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
